kubernetes/parked/istio-strict-mtls/mtls-policies.yaml


#

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: require-mtls
  namespace: n8n-prod
spec:
  endpointSelector:
    matchLabels:
      app: n8n
  ingress:
    - fromEndpoints:
        - {}
    - fromEntities:
        - world
        - host
        - remote-node
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: require-mtls
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gateway
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflared
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - fromEntities:
        - world
        - host
        - remote-node
        - health
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: require-mtls
  namespace: lldap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lldap
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: keycloak
    - fromEntities:
        - world
        - host
        - remote-node
        - health
